--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "removeComments": true,
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
