--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@microsoft/signalr": "^8.0.7",
     "@ngrx/effects": "^19.0.1",
     "@ngrx/entity": "^19.0.1",
     "@ngrx/store": "^19.0.1",
@@ -27,6 +28,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
+    "signalr": "^2.4.3",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
